array.island.Island.scala.error
Erreur de compilation :
Island:23: error: type mismatch;
 found   : Array[Int]
 required: Int
    return max(num);
              ^